--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http:172.31.95.225:9000/</sonar.host.url>
+		<sonar.host.url>http://44.200.55.34:90/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url> http://35.174.153.249:8081/repository/project-boa-demo-release//</url>
+	      <url> http://54.89.39.167:8081/repository/bank-app-release//</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://35.174.153.249:8081/repository/project-boa-demo-snapshot//</url>
+	      <url>http://54.89.39.167:8081/repository/bank-app-snapshot//</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
